>documentation now works for any command
>for PsiUtil class, added method to check if a PsiElement is of an IElementType