@@ -1,8 +1,0 @@
-in annotator, recolor identifiers that start with _ to local var color (actually no?)
-
-SQF problems
-	waitUntil {life_ticket_paid or (isNull (findDisplay 2600))};
-
-	if (((count _this)>1) && (typeName (_this select 1)=="SCALAR")) then {
-		_s=_this select 1;
-	};
