@@ -13,6 +13,9 @@ actionName
 activateAddons
 activatedAddons
 activateKey
+add3DENConnection
+add3DENEventHandler
+add3DENLayer
 addAction
 addBackpack
 addBackpackCargo
@@ -81,8 +84,10 @@ airDensityRTD
 airportSide
 AISFinishHeal
 alive
+all3DENEntities
 allControls
 allCurators
+allCutLayers
 allDead
 allDeadMen
 allDisplays
@@ -90,6 +95,7 @@ allGroups
 allMapMarkers
 allMines
 allMissionObjects
+allow3DMode
 allowCrewInImmobile
 allowCuratorLogicIgnoreAreas
 allowDamage
@@ -110,6 +116,7 @@ animateDoor
 animationPhase
 animationState
 append
+apply
 armoryPoints
 arrayIntersect
 asin
@@ -135,6 +142,7 @@ assignItem
 assignTeam
 assignToAirport
 atan
+atan2
 atg
 ATLToASL
 attachedObject
@@ -213,6 +221,7 @@ captiveNum
 cbChecked
 cbSetChecked
 ceil
+channelEnabled
 cheatsEnabled
 checkAIFeature
 civilian
@@ -232,10 +241,12 @@ clearRadio
 clearWeaponCargo
 clearWeaponCargoGlobal
 clearWeaponPool
+clientOwner
 closeDialog
 closeDisplay
 closeOverlay
 collapseObjectTree
+collect3DENHistory
 combatMode
 commandArtilleryFire
 commandChat
@@ -273,6 +284,8 @@ countFriendly
 countSide
 countType
 countUnknown
+create3DENComposition
+create3DENEntity
 createAgent
 createCenter
 createDialog
@@ -344,7 +357,25 @@ ctrlSetEventHandler
 ctrlSetFade
 ctrlSetFocus
 ctrlSetFont
+ctrlSetFontH1
+ctrlSetFontH1B
+ctrlSetFontH2
+ctrlSetFontH2B
+ctrlSetFontH3
+ctrlSetFontH3B
+ctrlSetFontH4
+ctrlSetFontH4B
+ctrlSetFontH5
+ctrlSetFontH5B
+ctrlSetFontH6
+ctrlSetFontH6B
 ctrlSetFontHeight
+ctrlSetFontHeightH1
+ctrlSetFontHeightH2
+ctrlSetFontHeightH3
+ctrlSetFontHeightH4
+ctrlSetFontHeightH5
+ctrlSetFontHeightH6
 ctrlSetFontP
 ctrlSetFontPB
 ctrlSetForegroundColor
@@ -379,6 +410,7 @@ curatorPoints
 curatorRegisteredObjects
 curatorSelected
 curatorWaypointCost
+current3DENOperation
 currentChannel
 currentCommand
 currentMagazine
@@ -395,6 +427,7 @@ currentWeapon
 currentWeaponMode
 currentWeaponTurret
 currentZeroing
+cursorObject
 cursorTarget
 customChat
 customRadio
@@ -411,6 +444,7 @@ debriefingText
 debugFSM
 debugLog
 deg
+delete3DENEntities
 deleteAt
 deleteCenter
 deleteCollection
@@ -462,13 +496,16 @@ disableUAVConnectability
 disableUserInput
 displayAddEventHandler
 displayCtrl
+displayParent
 displayRemoveAllEventHandlers
 displayRemoveEventHandler
 displaySetEventHandler
 dissolveTeam
 distance
+distance2D
 distanceSqr
 distributionRegion
+do3DENAction
 doArtilleryFire
 doFire
 doFollow
@@ -482,14 +519,18 @@ doWatch
 drawArrow
 drawEllipse
 drawIcon
+drawIcon3D
 drawLine
+drawLine3D
 drawLink
 drawLocation
+drawPolygon
 drawRectangle
 driver
 drop
 east
 echo
+edit3DENMissionAttributes
 editObject
 editorSetEventHandler
 effectiveCommander
@@ -543,6 +584,7 @@ execVM
 exit
 exp
 expectedDestination
+exportJIPMessages
 eyeDirection
 eyePos
 face
@@ -601,6 +643,19 @@ fuel
 fullCrew
 gearSlotAmmoCount
 gearSlotData
+get3DENActionState
+get3DENAttribute
+get3DENCamera
+get3DENConnections
+get3DENEntity
+get3DENEntityID
+get3DENGrid
+get3DENIconsVisible
+get3DENLayerEntities
+get3DENLinesVisible
+get3DENMissionAttribute
+get3DENMouseOver
+get3DENSelected
 getAllHitPointsDamage
 getAmmoCargo
 getAnimAimPrecision
@@ -617,6 +672,7 @@ getBurningValue
 getCargoIndex
 getCenterOfMass
 getClientState
+getClientStateNumber
 getConnectedUAV
 getDammage
 getDescription
@@ -648,6 +704,7 @@ getMass
 getMissionConfig
 getMissionConfigValue
 getModelInfo
+getMousePosition
 getNumber
 getObjectArgument
 getObjectChildren
@@ -660,6 +717,7 @@ getObjectViewDistance
 getOxygenRemaining
 getPersonUsedDLCs
 getPlayerChannel
+getPlayerScores
 getPlayerUID
 getPos
 getPosASL
@@ -741,10 +799,13 @@ inflamed
 inGameUISetEventHandler
 inheritsFrom
 initAmbientLife
+inPolygon
 inputAction
 inRangeOfArtillery
 insertEditorObject
 intersect
+is3DEN
+is3DENMultiplayer
 isAbleToBreathe
 isAgent
 isArray
@@ -765,6 +826,7 @@ isEqualTypeAll
 isEqualTypeAny
 isEqualTypeArray
 isEqualTypeParams
+isFilePatchingEnabled
 isFlashlightOn
 isFlatEmpty
 isForcedWalk
@@ -790,6 +852,7 @@ isPipEnabled
 isPlayer
 isRealTime
 isServer
+isShowing3DIcons
 isSprintAllowed
 isStaminaEnabled
 isSteamMission
@@ -920,10 +983,13 @@ locked
 lockedCargo
 lockedDriver
 lockedTurret
+lockIdentity
 lockTurret
 lockWP
 log
 logEntities
+logNetwork
+logNetworkTerminate
 lookAt
 lookAtPos
 magazineCargo
@@ -961,11 +1027,13 @@ mineActive
 mineDetectedBy
 missionName
 missionStart
+missionVersion
 modelToWorld
 modelToWorldVisual
 moonIntensity
 morale
 move
+move3DENCamera
 moveInAny
 moveInCargo
 moveInCommander
@@ -988,6 +1056,7 @@ nearestLocations
 nearestLocationWithDubbing
 nearestObject
 nearestObjects
+nearestTerrainObjects
 nearObjects
 nearObjectsReady
 nearRoads
@@ -1053,6 +1122,7 @@ playMoveNow
 playMusic
 playScriptedMission
 playSound
+playSound3D
 position
 positionCameraToWorld
 posScreenToWorld
@@ -1088,6 +1158,7 @@ publicVariable
 publicVariableClient
 publicVariableServer
 pushBack
+pushBackUnique
 putWeaponPool
 queryItemsPool
 queryMagazinePool
@@ -1113,7 +1184,11 @@ reloadEnabled
 remoteControl
 remoteExec
 remoteExecCall
+remove3DENConnection
+remove3DENEventHandler
+remove3DENLayer
 removeAction
+removeAll3DENEventHandlers
 removeAllActions
 removeAllAssignedItems
 removeAllContainers
@@ -1179,6 +1254,7 @@ reveal
 revealMine
 reverse
 reversedMouseY
+roadAt
 roadsConnectedTo
 roleDescription
 ropeAttachedObjects
@@ -1187,6 +1263,8 @@ ropeAttachEnabled
 ropeAttachTo
 ropeCreate
 ropeCut
+ropeDestroy
+ropeDetach
 ropeEndPosition
 ropeLength
 ropes
@@ -1210,6 +1288,8 @@ saveStatus
 saveVar
 savingEnabled
 say
+say2D
+say3D
 score
 scoreSide
 screenToWorld
@@ -1242,6 +1322,14 @@ serverCommandExecutable
 serverName
 serverTime
 set
+set3DENAttribute
+set3DENAttributes
+set3DENGrid
+set3DENIconsVisible
+set3DENLayer
+set3DENLinesVisible
+set3DENMissionAttributes
+set3DENObjectType
 setAccTime
 setAirportSide
 setAmmo
@@ -1376,6 +1464,7 @@ setPlayable
 setPlayerRespawnTime
 setPos
 setPosASL
+setPosASL2
 setPosASLW
 setPosATL
 setPosition
@@ -1466,6 +1555,7 @@ setWindDir
 setWindForce
 setWindStr
 setWPPos
+show3DIcons
 showChat
 showCinemaBorder
 showCommandingMenu
@@ -1496,7 +1586,9 @@ showWarrant
 showWatch
 showWaypoint
 side
+sideAmbientLife
 sideChat
+sideEmpty
 sideEnemy
 sideFriendly
 sideLogic
@@ -1623,6 +1715,7 @@ tvSetCurSel
 tvSetData
 tvSetPicture
 tvSetPictureColor
+tvSetText
 tvSetTooltip
 tvSetValue
 tvSort
