@@ -1,6 +1,6 @@
 package com.kaylerrenslow.plugin.lang.sqf.psi.helpers.doc;
 
-import com.intellij.lang.documentation.AbstractDocumentationProvider;
+import com.intellij.lang.documentation.DocumentationProviderEx;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
@@ -19,11 +19,10 @@ import java.util.List;
 /**
  * Created by Kayler on 01/03/2016.
  */
-public class SQFDocumentationProvider extends AbstractDocumentationProvider{
+public class SQFDocumentationProvider extends DocumentationProviderEx{
 	private static final String COMMAND_URL_PREFIX = Plugin.resources.getString("plugin.doc.sqf.commandURLPrefix");
-	private static final String SEE_MORE_AT = Plugin.resources.getString("plugin.doc.sqf.seeMoreAt");
+	private static final String COMMAND_DOC_EXTERNAL_LINK_NOTIFICATION = Plugin.resources.getString("plugin.doc.sqf.command_doc_external_link_notification_string_format");
 	private static final String COMMANDS_DOC_FILE_DIR = Plugin.resources.getString("plugin.doc.sqf.commandsDocFolder");
-
 
 	@Nullable
 	@Override
@@ -35,8 +34,8 @@ public class SQFDocumentationProvider extends AbstractDocumentationProvider{
 	@Override
 	public List<String> getUrlFor(PsiElement element, PsiElement originalElement) {
 		List<String> lst = new ArrayList<>();
-		if(PsiUtil.isOfElementType(originalElement, SQFTypes.COMMAND)){
-			lst.add(COMMAND_URL_PREFIX + originalElement.getText());
+		if (PsiUtil.isOfElementType(element, SQFTypes.COMMAND)){
+			lst.add(getCommandUrl(element.getText()));
 			return lst;
 		}
 		return null;
@@ -45,7 +44,7 @@ public class SQFDocumentationProvider extends AbstractDocumentationProvider{
 	@Nullable
 	@Override
 	public String generateDoc(PsiElement element, @Nullable PsiElement originalElement) {
-		if(PsiUtil.isOfElementType(originalElement, SQFTypes.COMMAND)){
+		if (PsiUtil.isOfElementType(element, SQFTypes.COMMAND)){
 			return generateCommandDoc(element.getText());
 		}
 		return null;
@@ -54,21 +53,22 @@ public class SQFDocumentationProvider extends AbstractDocumentationProvider{
 	@Nullable
 	@Override
 	public PsiElement getDocumentationElementForLookupItem(PsiManager psiManager, Object object, PsiElement element) {
-		System.out.println(getClass() + " getDocumentationElementForLookupItem");
-		return element;
+		if (PsiUtil.isOfElementType(element, SQFTypes.COMMAND)){
+			return element;
+		}
+		return null;
 	}
 
 	@Nullable
 	@Override
 	public PsiElement getDocumentationElementForLink(PsiManager psiManager, String link, PsiElement context) {
-		System.out.println(getClass() + " getDocumentationElementForLink");
 		return context;
 	}
 
 	@Override
 	@Nullable
 	public PsiElement getCustomDocumentationElement(@NotNull final Editor editor, @NotNull final PsiFile file, @Nullable PsiElement contextElement) {
-		if(PsiUtil.isOfElementType(contextElement, SQFTypes.COMMAND)){
+		if (PsiUtil.isOfElementType(contextElement, SQFTypes.COMMAND)){
 			return contextElement;
 		}
 		return null;
@@ -77,13 +77,18 @@ public class SQFDocumentationProvider extends AbstractDocumentationProvider{
 	@Override
 	@Nullable
 	public Image getLocalImageForElement(@NotNull PsiElement element, @NotNull String imageSpec) {
-//		System.out.println("SQFDocumentationProvider.getLocalImageForElement");
 		return null;
 	}
 
-	private String generateCommandDoc(String commandName){
+	private String generateCommandDoc(String commandName) {
 		String commandURL = getCommandUrl(commandName);
-		String doc = FileReader.getInstance().getText(COMMANDS_DOC_FILE_DIR + commandName) + "<br><br><br>"+ SEE_MORE_AT + " <a href='" + commandURL + "'>"+commandURL+"</a>";
+		String doc = "";
+		try{
+			doc = String.format(COMMAND_DOC_EXTERNAL_LINK_NOTIFICATION, commandURL) + FileReader.getInstance().getText(COMMANDS_DOC_FILE_DIR + commandName);
+
+		}catch(Exception e){
+			e.printStackTrace();
+		}
 		return doc;
 	}
 
