@@ -6,7 +6,7 @@ plugin.version = 1.0.0
 plugin.appdata.folderName = Arma 3 Intellij Plugin
 
 plugin.doc.sqf.commandURLPrefix = https://community.bistudio.com/wiki/
-plugin.doc.sqf.seeMoreAt = Read more at:
+plugin.doc.sqf.command_doc_external_link_notification_string_format = <b>Online Wiki link: <a href='%1$s'>%1$s</a><br></b>
 plugin.doc.sqf.commandsDocFolder = /com/kaylerrenslow/plugin/lang/sqf/commands-doc/
 
 plugin.module.arma.name = Arma Mission Module
@@ -19,10 +19,12 @@ lang.sqf.name = Arma.SQF
 lang.sqf.description = Arma - SQF
 lang.sqf.fileExtension = sqf
 lang.sqf.fileExtensionDefault = .sqf
-lang.sqf.icon = /com/kaylerrenslow/plugin/icons/sqf.png
+lang.sqf.icon.file = /com/kaylerrenslow/plugin/icons/sqf.png
+lang.sqf.icon.command = /com/kaylerrenslow/plugin/icons/command.png
+lang.sqf.commandsListFile = /com/kaylerrenslow/plugin/lang/sqf/commands.list
 
 lang.header.name = Arma.Header
 lang.header.description = Arma - Header/Config
 lang.header.fileExtension = h;hh;hpp;ext;sqm
 lang.header.fileExtensionDefault = .h
-lang.header.icon = /com/kaylerrenslow/plugin/icons/header.png
+lang.header.icon.file = /com/kaylerrenslow/plugin/icons/header.png
